updated css and classes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div>
-                <h2>Ryan Hemlock</h2>
+                <h2><a href="/">Ryan Hemlock</a></h2>
             </div>
 
             <div>
@@ -33,10 +33,10 @@
     </section>
 
     <!-- About Section -->
-    <section>
-        <div>
+    <section class="section-flex">
+        <aside>
             <h2>About Me</h2>
-        </div>
+        </aside>
         <div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
@@ -44,17 +44,23 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section>
-        <div>
+    <section class="section-flex">
+        <aside>
             <h2>Portfolio</h2>
+        </aside>
+        <div class="project-container">
+            <div class="project-text">
+                <h3>Project</h3>
+                <h4>Description</h4>
+            </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section>
-        <div>
+    <section class="section-flex">
+        <aside>
             <h2>Contact Me</h2>
-        </div>
+        </aside>
         <div>
             <p>A form will go here</p>
         </div>
