--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header>
         <nav>
             <div>
-                <h2><a href="/">Ryan Hemlock</a></h2>
+                <h2><a href="/" class="nav-link">Ryan Hemlock</a></h2>
             </div>
 
             <div>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" class="nav-link">About</a></li>
+                    <li><a href="#" class="nav-link">Portfolio</a></li>
+                    <li><a href="#" class="nav-link">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,7 +38,7 @@
             <h2>About Me</h2>
         </aside>
         <div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
         </div>
     </section>
