Completed hero section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     </header>
 
     <!-- Hero Section -->
-    <section>
-        <div class="hero">
-            <h1>My name is Ryan Hemlock 👋</h1>
+    <section class="hero">
+        <div class="hero-title-position">
+            <div class="subtitle-card ">
+                <h1>Cool Subtitle Here</h1>
+            </div>
         </div>
     </section>
 
