about section grid completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="nav-div">
-                <h2><a href="/" class="nav-link">Ryan Hemlock</a></h2>
+                <h2 class="logo"><a href="/" class="nav-link">Ryan Hemlock</a></h2>
             </div>
 
             <div class="nav-div">
@@ -37,7 +37,7 @@
     </section>
 
     <!-- About Section -->
-    <!-- <section class="section-flex">
+    <section class="section-flex">
         <aside>
             <h2 class="title">About Me</h2>
         </aside>
@@ -45,7 +45,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p><br>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
         </div>
-    </section> -->
+    </section>
 
     <!-- Portfolio Section -->
     <!-- <section class="section-flex">
