portfolio grid and flex created

--- a/index.html
+++ b/index.html
@@ -37,40 +37,51 @@
     </section>
 
     <!-- About Section -->
-    <section class="section-flex">
+    <section class="section-grid">
         <aside>
             <h2 class="title">About Me</h2>
         </aside>
-        <div class="border-line about-text">
+        <div class="border-line content-container">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p><br>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
         </div>
     </section>
 
     <!-- Portfolio Section -->
-    <!-- <section class="section-flex">
+    <section class="section-grid">
         <aside>
             <h2 class="title">Portfolio</h2>
         </aside>
-        <div class="project-container">
-            <div class="project-text">
-                <h3>Project</h3>
-                <h4>Description</h4>
+        <div class="border-line content-container">
+            <div class="project-container">
+                <div class="project-box">
+                    <h3>Project</h3>
+                    <h4>Description</h4>
+                </div>
+                <div class="project-box">
+                    <h3>Project</h3>
+                    <h4>Description</h4>
+                </div>
+                <div class="project-box">
+                    <h3>Project</h3>
+                    <h4>Description</h4>
+                </div>
+                <div class="project-box">
+                    <h3>Project</h3>
+                    <h4>Description</h4>
+                </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Contact Section -->
-    <!-- <section class="section-flex">
+    <section class="section-grid">
         <aside>
             <h2 class="title">Contact Me</h2>
         </aside>
-        <div>
-            <p>A form will go here</p>
-        </div>
-        <div>
+        <div class="border-line">
             <p>My contact info will go here</p>
         </div>
-    </section> -->
+    </section>
 </body>
 </html>
