--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="nav-div">
-                <ul>
+                <ul class="nav-ul">
                     <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Portfolio</a></li>
                     <li><a href="#" class="nav-link">Contact</a></li>
@@ -31,56 +31,78 @@
     <section class="hero">
         <div class="hero-title-position">
             <div class="subtitle-card ">
-                <h1>Cool Subtitle Here</h1>
+                <h1>Cool Subtitle Goes Here!!!!!</h1>
             </div>
         </div>
     </section>
 
     <!-- About Section -->
-    <section class="section-grid">
-        <aside>
+    <section class="section-row">
+        <aside class="column left">
             <h2 class="title">About Me</h2>
         </aside>
-        <div class="border-line content-container">
+        <div class="border-line column right">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p><br>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
         </div>
     </section>
 
     <!-- Portfolio Section -->
-    <section class="section-grid">
-        <aside>
+    <section class="section-row">
+        <!-- Title -->
+        <aside class="column left">
             <h2 class="title">Portfolio</h2>
         </aside>
-        <div class="border-line content-container">
+
+        <!-- Projects -->
+        <div class="border-line column right">
             <div class="project-container">
-                <div class="project-box">
-                    <h3>Project</h3>
-                    <h4>Description</h4>
+                <div class="project-box" id="project-1">
+                    <div class="project-info subtitle-card">
+                        <h3>Project</h3>
+                        <h4>Description</h4>
+                    </div>
                 </div>
-                <div class="project-box">
-                    <h3>Project</h3>
-                    <h4>Description</h4>
+                <div class="project-box" id="project-2">
+                    <div class="project-info">
+                        <h3>Project</h3>
+                        <h4>Description</h4>
+                    </div>
                 </div>
-                <div class="project-box">
-                    <h3>Project</h3>
-                    <h4>Description</h4>
+                <div class="project-box" id="project-3">
+                    <div class="project-info">
+                        <h3>Project</h3>
+                        <h4>Description</h4>
+                    </div>
                 </div>
-                <div class="project-box">
-                    <h3>Project</h3>
-                    <h4>Description</h4>
+                <div class="project-box" id="project-4">
+                    <div class="project-info">
+                        <h3>Project</h3>
+                        <h4>Description</h4>
+                    </div>
+                </div>
+                <div class="project-box" id="project-5">
+                    <div class="project-info">
+                        <h3>Project</h3>
+                        <h4>Description</h4>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section class="section-grid">
-        <aside>
+    <section class="section-row">
+        <aside class="column left">
             <h2 class="title">Contact Me</h2>
         </aside>
-        <div class="border-line">
-            <p>My contact info will go here</p>
+        <div class="border-line column right">
+            <ul id=="contact-ul">
+                <li><a href="" class="contact-link">Phone</a></li>
+                <li><a href="" class="contact-link">Phone</a></li>
+                <li><a href="" class="contact-link">Phone</a></li>
+                <li><a href="" class="contact-link">Phone</a></li>
+            </ul>
         </div>
     </section>
 </body>
