Updated contact footer

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
             <h2 class="title">Contact Me</h2>
         </aside>
         <div class="border-line column right">
-            <ul id=="contact-ul">
-                <li><a href="" class="contact-link">Phone</a></li>
-                <li><a href="" class="contact-link">Phone</a></li>
-                <li><a href="" class="contact-link">Phone</a></li>
-                <li><a href="" class="contact-link">Phone</a></li>
+            <ul class="contact-ul">
+                <li><a href="" class="contact-link">484-678-6652</a></li>
+                <li><a href="" class="contact-link">ryan@thebemateam.com</a></li>
+                <li><a href="" class="contact-link">Github</a></li>
+                <li><a href="" class="contact-link">LinkedIn</a></li>
             </ul>
         </div>
     </section>
