fixed portfolio grid

--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
                     </div>
                 </div>
                 <div class="project-box" id="project-2">
-                    <div class="project-info">
+                    <div class="project-info subtitle-card">
                         <h3>Project</h3>
                         <h4>Description</h4>
                     </div>
                 </div>
                 <div class="project-box" id="project-3">
-                    <div class="project-info">
+                    <div class="project-info subtitle-card">
                         <h3>Project</h3>
                         <h4>Description</h4>
                     </div>
                 </div>
                 <div class="project-box" id="project-4">
-                    <div class="project-info">
+                    <div class="project-info subtitle-card">
                         <h3>Project</h3>
                         <h4>Description</h4>
                     </div>
                 </div>
                 <div class="project-box" id="project-5">
-                    <div class="project-info">
+                    <div class="project-info subtitle-card">
                         <h3>Project</h3>
                         <h4>Description</h4>
                     </div>
