fixed portfolio grid responsiveness

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-title-position">
-            <div class="subtitle-card ">
-                <h1>Cool Subtitle Goes Here!!!!!</h1>
+        <div class="hero-content">
+            <div class="hero-title-position">
+                <div class="subtitle-card ">
+                    <h1>Cool Subtitle Goes Here!!!!!</h1>
+                </div>
             </div>
         </div>
     </section>
