updated nav bar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Nav Bar -->
     <header>
         <nav>
-            <div class="nav-div">
-                <h2 class="logo"><a href="/" class="nav-link">Ryan Hemlock</a></h2>
+            <div class="nav-logo-container">
+                <h2 id="logo"><a href="/" class="nav-logo">Ryan Hemlock</a></h2>
             </div>
 
             <div class="nav-div">
@@ -32,7 +32,7 @@
         <div class="hero-content">
             <div class="hero-title-position">
                 <div class="subtitle-card ">
-                    <h1>Cool Subtitle Goes Here!!!!!</h1>
+                    <h1>Cool Subtitle Goes Here</h1>
                 </div>
             </div>
         </div>
