updated contact section and responsiveness

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             <div class="nav-div">
                 <ul class="nav-ul">
-                    <li><a href="#" class="nav-link">About</a></li>
-                    <li><a href="#" class="nav-link">Portfolio</a></li>
-                    <li><a href="#" class="nav-link">Contact</a></li>
+                    <li><a href="#about-section" class="nav-link">About</a></li>
+                    <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
+                    <li><a href="#contact-section" class="nav-link">Contact</a></li>
                     <li><a href="#" class="nav-link">Resume</a></li>
                 </ul>
             </div>
@@ -32,14 +32,14 @@
         <div class="hero-content">
             <div class="hero-title-position">
                 <div class="subtitle-card ">
-                    <h1>Cool Subtitle Goes Here</h1>
+                    <h1>Cool Subtitle Here!</h1>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- About Section -->
-    <section class="section-row">
+    <section class="section-row" id="about-section">
         <aside class="column left">
             <h2 class="title">About Me</h2>
         </aside>
@@ -50,7 +50,7 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section class="section-row">
+    <section class="section-row" id="portfolio-section">
         <!-- Title -->
         <aside class="column left">
             <h2 class="title">Portfolio</h2>
@@ -94,18 +94,18 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="section-row">
+    <footer class="section-row" id="contact-section">
         <aside class="column left">
-            <h2 class="title">Contact Me</h2>
+            <h2 id="contact-title" class="title">Contact Me</h2>
         </aside>
         <div class="border-line column right">
             <ul class="contact-ul">
                 <li><a href="" class="contact-link">484-678-6652</a></li>
                 <li><a href="" class="contact-link">ryan@thebemateam.com</a></li>
-                <li><a href="" class="contact-link">Github</a></li>
-                <li><a href="" class="contact-link">LinkedIn</a></li>
+                <li><a href="https://github.com/rhemlock7" target="_blank" rel="noreferrer" class="contact-link">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/ryan-hemlock/" target="_blank" rel="noreferrer" class="contact-link">LinkedIn</a></li>
             </ul>
         </div>
-    </section>
+    </footer>
 </body>
 </html>
