created hover effect on project elements

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Projects -->
         <div class="border-line column right">
             <div class="project-container">
-                <div class="project-box" id="project-1">
+                <div class="project-box shadow" id="project-1">
                     <div class="project-info subtitle-card">
                         <h3>Project</h3>
                         <h4>Description</h4>
