--- a/index.html
+++ b/index.html
@@ -61,32 +61,32 @@
             <div class="project-container">
                 <div class="project-box shadow" id="project-1">
                     <div class="project-info subtitle-card">
-                        <h3>Project</h3>
-                        <h4>Description</h4>
+                        <h3>Surf Report</h3>
+                        <h4>MERN Stack</h4>
                     </div>
                 </div>
                 <div class="project-box" id="project-2">
                     <div class="project-info subtitle-card">
-                        <h3>Project</h3>
-                        <h4>Description</h4>
+                        <h3>LED Wall</h3>
+                        <h4>Node/IoT</h4>
                     </div>
                 </div>
                 <div class="project-box" id="project-3">
                     <div class="project-info subtitle-card">
-                        <h3>Project</h3>
-                        <h4>Description</h4>
+                        <h3>Calculator</h3>
+                        <h4>React/JavaScript/CSS</h4>
                     </div>
                 </div>
                 <div class="project-box" id="project-4">
                     <div class="project-info subtitle-card">
-                        <h3>Project</h3>
-                        <h4>Description</h4>
+                        <h3>Pastel Pretzels</h3>
+                        <h4>MERN Stack</h4>
                     </div>
                 </div>
                 <div class="project-box" id="project-5">
                     <div class="project-info subtitle-card">
-                        <h3>Project</h3>
-                        <h4>Description</h4>
+                        <h3>Run Bunny</h3>
+                        <h4>HTML/CSS</h4>
                     </div>
                 </div>
             </div>
