Added deployed project to portfolio and started editing the README

--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
             <div class="project-container">
                 <div class="project-box shadow" id="project-1">
                     <div class="project-info subtitle-card">
-                        <h3>Surf Report</h3>
-                        <h4>MERN Stack</h4>
+                        <a href="https://rhemlock7.github.io/agency-code-refactoring/" target="_blank" rel="noreferrer">
+                            <div>
+                                <h3>Horiseon Refactoring</h3>
+                                <h4>HTML/CSS</h4>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="project-box" id="project-2">
