--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio Website</title>
 </head>
+
 <body>
 
     <!-- Nav Bar -->
@@ -22,7 +24,7 @@
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
                 </ul>
             </div>
-            
+
         </nav>
     </header>
 
@@ -43,8 +45,14 @@
             <h2 class="title">About Me</h2>
         </aside>
         <div class="border-line column right">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p><br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error quasi facere accusamus.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor,
+                totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error
+                quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni
+                impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod
+                sunt quisquam, error quasi facere accusamus.</p><br>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor,
+                totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error
+                quasi facere accusamus.</p>
         </div>
     </section>
 
@@ -105,10 +113,13 @@
             <ul class="contact-ul">
                 <li><a href="" class="contact-link">484-678-6652</a></li>
                 <li><a href="" class="contact-link">ryan@thebemateam.com</a></li>
-                <li><a href="https://github.com/rhemlock7" target="_blank" rel="noreferrer" class="contact-link">Github</a></li>
-                <li><a href="https://www.linkedin.com/in/ryan-hemlock/" target="_blank" rel="noreferrer" class="contact-link">LinkedIn</a></li>
+                <li><a href="https://github.com/rhemlock7" target="_blank" rel="noreferrer"
+                        class="contact-link">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/ryan-hemlock/" target="_blank" rel="noreferrer"
+                        class="contact-link">LinkedIn</a></li>
             </ul>
         </div>
     </footer>
 </body>
+
 </html>
