--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#about-section" class="nav-link">About</a></li>
                     <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
                     <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                    <li><a href="#resume" class="nav-link">Resume</a></li>
+                    <li><a href="https://www.dropbox.com/scl/fi/1wdn979vz7jyfqj37q436/RH-Resume-DRAFT.pdf?rlkey=1csh566zw35lausarz08e5yca&dl=0" target="_blank" rel="referrer" class="nav-link">Resume</a></li>
                 </ul>
             </div>
 
@@ -46,15 +46,18 @@
             <h2 class="title">About Me</h2>
         </aside>
         <div class="border-line column right" id="about-flex">
-            <div class="about-content" >
+            <div class="about-content">
                 <img id="ryan-img" src="./assets/ryan-hemlock-headshot.jpg" alt="ryan hemlock headshot" />
             </div>
             <div class="about-content">
                 <h2>My name is Ryan Hemlock 👋</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur dolor,
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni impedit, tenetur
+                    dolor,
                     totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod sunt quisquam, error
-                    quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio magni
-                    impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa. Quod
+                    quasi facere accusamus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, distinctio
+                    magni
+                    impedit, tenetur dolor, totam officia architecto voluptate suscipit voluptas ratione beatae ipsa.
+                    Quod
                     sunt quisquam, error quasi facere accusamus.</p>
             </div>
         </div>
